--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -143,7 +143,8 @@
 #serviveSub {
   font-size: 1.5rem;
   font-weight: normal;
-  color: var(--themeSec);
+  color: white;
+  margin-bottom: 5px;
 }
 #servicesback {
   padding: 5rem 0rem;
