--- a/styles/globals.css
+++ b/styles/globals.css
@@ -148,7 +148,7 @@ footer{
   display : inline;
 }
 .terms{
-  padding: 0 0.5rem 0 0.7rem;
+  padding: 0 0.5rem;
   display : inline;
 }
 /* Thank you */
