--- a/styles/globals.css
+++ b/styles/globals.css
@@ -137,7 +137,7 @@ footer{
   gap:0.5rem;
 }
 #policyterms{
-  font-size: 0.8rem;
+  font-size: 1.8rem;
   font-weight: 400;
   color: white;
   padding: 0.5rem 0;
@@ -250,5 +250,8 @@ footer{
   }
   #footEm{
     font-size: 2rem;
+  }
+  #policyterms{
+    font-size: 1.5rem;
   }
 }
