--- a/styles/services.module.css
+++ b/styles/services.module.css
@@ -12,15 +12,17 @@
 #cards{
     padding: 5rem;
     padding-top: 0;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     gap:1rem;
-    flex-direction: column;
+    /* flex-direction: row;
+    flex-wrap: wrap; */
 }
 .card{
     background-color: var(--themeColor);
-
     padding: 3rem;
     border-radius: 1rem;
+    /* max-width: 50%; */
 }
 .cardHead{
     font-size: 3rem;
@@ -134,6 +136,13 @@
     padding-bottom: 1rem;
     cursor: pointer;
 }
+
+@media screen and (max-width:1200px) {
+    #cards{
+        grid-template-columns: 1fr;
+    }
+}
+
 @media screen and (max-width:700px) {
     #ser{
         padding: 4rem;
@@ -149,6 +158,7 @@
         flex-direction: column;
     }
     #cards{
+        /* grid-template-columns: 1fr; */
         padding: 2rem;
         padding-top: 5rem;
     }
@@ -157,9 +167,7 @@
         padding-bottom:1rem ;
     }
     .ele{
-      
         font-size: 2rem;
-     
     }
     .inp{
    
