--- a/styles/blogsHome.module.css
+++ b/styles/blogsHome.module.css
@@ -132,7 +132,7 @@
     cursor: pointer;
     display: inline-block;
     text-decoration: none;
-    color: var(--clr-neutral-900);
+    color: var(--clr-neutral-100);
     background-color: var(--clr-accent-400);
     padding: 0.5em 1.25em;
     border-radius: 0.25em;
@@ -140,6 +140,7 @@
 
 .buttonn:hover,
 .buttonn:focus {
+    color: var(--clr-accent-400);
     background-color: var(--clr-neutral-100);
 }
 
