--- a/styles/blogs.module.css
+++ b/styles/blogs.module.css
@@ -12,6 +12,14 @@
     color: var(--themeColor);
     font-weight: 600;
 }
+
+.subHeadd{
+    display: inline;
+    font-size: 1.7rem;
+    color: var(--themeColor);
+    font-weight: 600;
+}
+
 #abtCont{
     line-height: 2;
     font-size: 1.5rem;
@@ -47,6 +55,9 @@
         font-weight: 700;
         font-size: 1.8rem;
         line-height: 0.8;
+    }
+    .subHeadd{
+        font-size: 1.3rem;
     }
 }
 
